Bug 272181 - Encryption strength indication over wifi icon in “Show More” enabled main view
Summary: Encryption strength indication over wifi icon in “Show More” enabled main view
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 280693 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-01 20:17 UTC by Kai Uwe Broulik
Modified: 2011-09-29 13:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Network Manager encryption strength indication misplaced (295.04 KB, image/png)
2011-05-01 20:17 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-05-01 20:17:28 UTC
Created attachment 59511 [details]
Network Manager encryption strength indication misplaced

Version:           unspecified (using Devel) 
OS:                Linux

If you choose “Show More” on the plasmoid‘s main view, additional networks appear (WiFis around you) but these have the strength indication (red/yellow/green shield) overlaid over their WiFi icon instead of on the right next to the signal strength bar.
This does not (sometimes yes) happen when chosing “Show More” in the adapter view.

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-05-02 01:59:35 UTC
I have noticed this sometimes, it seems related to the ad-hoc patch and the developer who created the ad-hoc patch commited a patch to fix it in April 24th. Are you using a newer snapshot?
Comment 2 Kai Uwe Broulik 2011-05-03 14:02:59 UTC
I just pulled it from git and compiled it  (since Kubuntu’s update policy is horrible). Also that back button hover thing I reported is not yet in there (but maybe I just have to restart)
Comment 3 Lamarque V. Souza 2011-07-22 00:00:51 UTC
Is this still happening?
Comment 4 Kai Uwe Broulik 2011-07-22 00:10:05 UTC
Couldn’t reproduce it but the bug didn’t regularily/reliably occur.
Comment 5 Kai Uwe Broulik 2011-07-22 00:11:09 UTC
Correction: Yes, still happens. It did not happen when I clicked the WiFI connection and made the other Hotspots appear but it happened when I clicked “Show More” from the main page.
Comment 6 Lamarque V. Souza 2011-08-24 13:49:08 UTC
*** Bug 280693 has been marked as a duplicate of this bug. ***
Comment 7 Lamarque V. Souza 2011-08-25 00:32:39 UTC
Ilia, this problem still persists. I cannot reproduce it in my notebook but I saw it happening in a notebook from a guy during Desktop Summit in Berlin. It is very weird, maybe it is a problem in Plasma or Qt. By the way, Kai Uwe Broulik, which KDE SC and Qt versions do you use?
Comment 8 Ilia Kats 2011-08-25 06:43:57 UTC
Yes, I know, I've been experiencing this for some time now, but I couldn't figure out what's causing this. This is happening to all types of wireless networks, not just adhoc. The interesting part is that as soon as the layout is redone, e.g. the scrollbar appears, the icons are all in the right place. This behavior can be seen if you have a lot of networks, so after toggling the Show More button, some will have the security icon displaced, then after a second or so the scrollbar appears, making the available space for the networks smaller, thus the layout is redone and the icons are all where they belong. This happens sporadically and not really reproducible, it can happen to one, some or all networks in the list.
Comment 9 Lamarque V. Souza 2011-08-25 13:10:37 UTC
Maybe adding m_layout->invalidade() in WirelessNetworkItem::setupItem(), after adding all the QGraphicsWidgets, solves the problem. Can you try it?
Comment 10 Ilia Kats 2011-08-25 16:11:07 UTC
Nope, doesn't solve it.
Comment 11 Lamarque V. Souza 2011-09-25 18:44:19 UTC
The changes I did for limiting the connection's name may have impact in this problem. Please 'git pull' and test if it solves this problem too.
Comment 12 Kai Uwe Broulik 2011-09-26 10:40:08 UTC
Still encountering it, now all the WiFi connections (instead of random ones) have the strength indicator wrong.
Comment 13 Lamarque V. Souza 2011-09-27 11:58:29 UTC
How is the strengh indicator wrong? Can you attach a screenshot?
Comment 14 Kai Uwe Broulik 2011-09-27 13:40:07 UTC
I am not at home right now.
But it is wrong like in the screenshot above, i.e. the encryption strength (sorry, I did not mean the signal strength) indicator (the red/yellow/green shield indicating the encryption) is on the left side over the connection icon rather than right next to the signal strength bar.
Comment 15 Lamarque V. Souza 2011-09-27 13:48:01 UTC
Please send me a new screenshot, I want to check one thing. This time mouse over on any connection that has the security icon misplaced so that the highlighting appears around it.
Comment 16 Ilia Kats 2011-09-29 13:20:04 UTC
Git commit 05c9da94105a4bd392ca35a529255f87cf221e10 by Ilia Kats.
Committed on 29/09/2011 at 15:18.
Pushed by iliakats into branch 'nm09'.

Hack to make the wireless security icon always appear where it's supposed
to be. This seems to be an upsream issue, see
https://bugreports.qt.nokia.com//browse/QTBUG-12328

BUG: 272181

M  +7    -0    applet/wirelessnetworkitem.cpp
M  +4    -0    applet/wirelessnetworkitem.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/05c9da94105a4bd392ca35a529255f87cf221e10