Hack to make the wireless security icon always appear where it's supposed to be. This seems to be an upsream issue, see https://bugreports.qt.nokia.com//browse/QTBUG-12328

BUG: 272181